# newchess

./: .gitignore  README.md  agent.py  composer.py  config.py  debug_numpy.py  debug_torch.py  memory.py  motor.py  pyproject.toml  selfplay.py  senses.py
configs/: cpu_debug.yaml  default.yaml  small.yaml
data/: README.md  part_0_59cb5564.jsonl  part_1_5baa8276.jsonl  part_2_9d7793aa.jsonl  part_3_7253307b.jsonl  part_4_5013782d.jsonl  part_5_aae431ff.jsonl  part_6_11ce6aa0.jsonl  part_7_cfc7f0d5.jsonl  selfplay_6bf89df9.jsonl  stockfish_positions.jsonl
scripts/: generate_data.py  launch_gcp_training.py  launch_pipeline.py  train_rl.py
src/: main.py
src/chess_nn/: __init__.py  config.py  data.py  features.py  gcp.py  model.py  move_encoding.py  rl_train.py  selfplay.py  stockfish_data.py  train.py  utils.py
